# understanding-rag

./: .gitignore  README.md  config.py  pyproject.toml  test_gemini.py
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test_adder_differ.py  test_cosine_similarity.py  test_dot.py
cli/lib/: gemini.py  hybrid_search.py  multimodal_search.py  rag_search.py  search_utils.py  semantic_search.py
